# ArxLibertatis-android-port

./: .gitignore  .gitmodules  CMakeLists.txt  PrivacyPolicy.txt  README.md  build.gradle  gradle.properties  release-keystore.jks  settings.gradle
app/: build.gradle  proguard-rules.pro  release-keystore.properties
app/src/androidTest/java/com/arxlibertatis/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/game_files/: cfg.ini
app/src/main/assets/game_files/localisation/: xtext_default_001_arxlibertatis.ini
app/src/main/java/com/arxlibertatis/: MainActivity.kt
app/src/main/java/com/arxlibertatis/engine/: Engine.kt
app/src/main/java/com/arxlibertatis/engine/activity/: EngineActivity.kt
app/src/main/java/com/arxlibertatis/interfaces/: MainActivityView.kt  MainFragmentView.kt  SettingsFragmentMvpView.kt
app/src/main/java/com/arxlibertatis/presenter/: MainActivityPresenter.kt  MainFragmentPresenter.kt  SettingsFragmentPresenter.kt
app/src/main/java/com/arxlibertatis/single/activity/: SingleActivity.kt
app/src/main/java/com/arxlibertatis/single/fragment/: SingleFragment.kt
app/src/main/java/com/arxlibertatis/ui/activity/: ConfigureControlsActivity.kt  MainActivity.java  MainActivity.kt  TVActivity.kt
app/src/main/java/com/arxlibertatis/ui/controls/: JoystickHolder.kt  SDLJoystick.kt  ScreenControlsManager.kt
app/src/main/java/com/arxlibertatis/ui/controls/views/: JoyStick.java  MouseSDLImageButton.kt  SDLButton.kt  SDLImageButton.kt  ToggleMouseSDLButton.kt  ToggleSdlImageButton.kt  TouchCamera.java
app/src/main/java/com/arxlibertatis/ui/fragment/: MainFragment.kt  MvpAppCompatFragment.java  SettingsFragment.kt
app/src/main/java/com/arxlibertatis/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/arxlibertatis/utils/: ASFUriHelper.java  Consts.kt  Utils.kt
app/src/main/java/com/arxlibertatis/utils/extensions/: ContextExtensions.kt  Extensions.kt
app/src/main/res/layout/: content_main.xml  main_activity.xml  main_fragment.xml  screen_controls.xml  tv_activity.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: colors.xml  ic_banner_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: settings.xml
app/src/test/java/com/arxlibertatis/: ExampleUnitTest.kt
directory-picker/: build.gradle
directory-picker/src/androidTest/java/com/example/directory_picker/: ExampleInstrumentedTest.java
directory-picker/src/main/java/com/obsez/android/lib/filechooser/: ChooserDialog.java  onShowListener.java
directory-picker/src/main/java/com/obsez/android/lib/filechooser/tool/: DirAdapter.java
directory-picker/src/test/java/com/example/directory_picker/: ExampleUnitTest.java
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  9.txt
freetype2/: build.gradle
freetype2/src/androidTest/java/com/freetype2/: ExampleInstrumentedTest.java
freetype2/src/test/java/com/freetype2/: ExampleUnitTest.java
gl4es/: build.gradle
gl4es/src/androidTest/java/com/gl4es/: ExampleInstrumentedTest.java
gl4es/src/test/java/com/gl4es/: ExampleUnitTest.java
glm/: build.gradle
glm/src/androidTest/java/com/glm/: ExampleInstrumentedTest.java
glm/src/test/java/com/glm/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libepoxy/: build.gradle
libepoxy/src/androidTest/java/com/example/libepoxy/: ExampleInstrumentedTest.java
libepoxy/src/main/: Android.mk
libepoxy/src/test/java/com/example/libepoxy/: ExampleUnitTest.java
libopenal/: build.gradle
libopenal/src/androidTest/java/com/example/libopenal/: ExampleInstrumentedTest.java
libopenal/src/test/java/com/example/libopenal/: ExampleUnitTest.java
zlib/: build.gradle
zlib/src/androidTest/java/com/zlib/: ExampleInstrumentedTest.java
zlib/src/main/jni/: Android.mk
zlib/src/test/java/com/zlib/: ExampleUnitTest.java
